# tile-renderer

./: .buildinfo  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  CHANGELOG.md  LICENSE  MANIFEST  README.md  SOURCES.txt  changelog.rst  cli.html  codecov.yml  data_format.html  docs.md  examplepla.json  genindex.html  index.html  nodeJsonBuilder.py  objects.inv  py-modindex.html  pylock.docs.toml  pylock.hatch-build.toml  pylock.hatch-check-code.toml  pylock.hatch-check-fmt.toml  pylock.hatch-check-types.toml  pylock.hatch-static-analysis.toml  pylock.hatch-test-py3-12.toml  pylock.hatch-test-py3-13.toml  pylock.hatch-test-py3-14.toml  pylock.toml  pyproject.toml  reference.html  renderer.py  search.html  searchindex.js  setup.py  temp.py  test-enc.py  test.pstats  (+7 more)
.config/: hk.pkl  mise.lint.toml  mise.toml  miserc.toml
.github/: dependabot.yml  renovate.json
.github/workflows/: benchmark.yml  codeql.yml  format-lint.yml  pages.yml  publish.yml  pylock.yml  python-lock.yml  test.yml
_autosummary/: tile_renderer.cli.html  tile_renderer.colour.Colour.html  tile_renderer.colour.html  tile_renderer.component_to_svg.area_border_text_svg.html  tile_renderer.component_to_svg.area_centre_image_svg.html  tile_renderer.component_to_svg.area_centre_text_svg.html  tile_renderer.component_to_svg.area_fill_svg.html  tile_renderer.component_to_svg.html  tile_renderer.component_to_svg.line_back_fore_svg.html  tile_renderer.component_to_svg.line_text_svg.html  tile_renderer.component_to_svg.point_image_svg.html  tile_renderer.component_to_svg.point_square_svg.html  tile_renderer.component_to_svg.point_text_svg.html  tile_renderer.coord.Bounds.html  tile_renderer.coord.Coord.html  tile_renderer.coord.Line.html  tile_renderer.coord.TileCoord.html  tile_renderer.coord.Vector.html  tile_renderer.coord.html  tile_renderer.html  tile_renderer.pla1to2.html  tile_renderer.pla1to2.pla1to2.html  tile_renderer.pla2.Component.html  tile_renderer.pla2.Pla2File.html  tile_renderer.pla2.html  tile_renderer.render_svg.html  tile_renderer.render_svg.render_svg.html  tile_renderer.render_tiles.html  tile_renderer.render_tiles.render_tiles.html  tile_renderer.skin.AreaBorderText.html  tile_renderer.skin.AreaCentreImage.html  tile_renderer.skin.AreaCentreText.html  tile_renderer.skin.AreaFill.html  tile_renderer.skin.ComponentStyle.html  tile_renderer.skin.ComponentType.html  tile_renderer.skin.LineBack.html  tile_renderer.skin.LineFore.html  tile_renderer.skin.LineText.html  tile_renderer.skin.PointImage.html  tile_renderer.skin.PointSquare.html  (+6 more)
_sources/: cli.rst.txt
_sources/_autosummary/: tile_renderer.cli.rst.txt  tile_renderer.colour.Colour.rst.txt  tile_renderer.colour.rst.txt  tile_renderer.component_to_svg.area_border_text_svg.rst.txt  tile_renderer.component_to_svg.area_centre_image_svg.rst.txt  tile_renderer.component_to_svg.area_centre_text_svg.rst.txt  tile_renderer.component_to_svg.area_fill_svg.rst.txt  tile_renderer.component_to_svg.line_back_fore_svg.rst.txt  tile_renderer.component_to_svg.line_text_svg.rst.txt  tile_renderer.component_to_svg.point_image_svg.rst.txt  tile_renderer.component_to_svg.point_square_svg.rst.txt  tile_renderer.component_to_svg.point_text_svg.rst.txt  tile_renderer.component_to_svg.rst.txt  tile_renderer.coord.Bounds.rst.txt  tile_renderer.coord.Coord.rst.txt  tile_renderer.coord.Line.rst.txt  tile_renderer.coord.TileCoord.rst.txt  tile_renderer.coord.Vector.rst.txt  tile_renderer.coord.rst.txt  tile_renderer.pla1to2.pla1to2.rst.txt  tile_renderer.pla1to2.rst.txt  tile_renderer.pla2.Component.rst.txt  tile_renderer.pla2.Pla2File.rst.txt  tile_renderer.pla2.rst.txt  tile_renderer.render_svg.render_svg.rst.txt  tile_renderer.render_svg.rst.txt  tile_renderer.render_tiles.render_tiles.rst.txt  tile_renderer.render_tiles.rst.txt  tile_renderer.rst.txt  tile_renderer.skin.AreaBorderText.rst.txt  tile_renderer.skin.AreaCentreImage.rst.txt  tile_renderer.skin.AreaCentreText.rst.txt  tile_renderer.skin.AreaFill.rst.txt  tile_renderer.skin.ComponentStyle.rst.txt  tile_renderer.skin.ComponentType.rst.txt  tile_renderer.skin.LineBack.rst.txt  tile_renderer.skin.LineFore.rst.txt  tile_renderer.skin.LineText.rst.txt  tile_renderer.skin.PointImage.rst.txt  tile_renderer.skin.PointSquare.rst.txt  (+6 more)
_static/: documentation_options.js
data/: enc-half.pla2.json  enc.pla2.json  encinitas.comps.pla  encinitas.nodes.pla  encinitasnodes.json  encinitaspla.json  example.comps.pla  example.nodes.pla  example.pla2.json  example2.comps.pla  examplenodes.json  examplepla.json  examplepla2.json
docs/: changelog.rst  cli.rst  conf.py  data_format.rst  formats.rst  functions.rst  index.rst  reference.rst  requirements.txt  tutorials.rst  usage.rst
renderer/: __init__.py  __main__.py  base.py  internal.py  math_utils.py  mathtools.py  merge_tiles.py  misc.py  nodeJsonBuilder.py  pla1to2.py  render.py  renderer.py  rendering.py  tools.py  types.py  utils.py  validate.py
renderer/_internal/: __init__.py  logger.py
renderer/builders/: comp.py  node.py  pla.py
renderer/internals/: internal.py  logger.py  rendering.py
renderer/misc_types/: __init__.py  config.py  coord.py  pla2.py  skin.py  skin_builder.py  zoom_params.py
renderer/objects/: components.py  nodes.py  skin.py  skinbuilder.py  zoom_params.py
renderer/render/: __init__.py  multiprocess.py  part1.py  part2.py  part3.py  prepare.py  text_object.py  utils.py
renderer/skin_type/: __init__.py  area.py  line.py  point.py
renderer/skins/: default.json  default.py  default_credits.yml
renderer/tmp/: README.txt
renderer/tools/: component_json.py  components.py  coord.py  geo_json.py  line.py  nodes.py  tile.py
renderer/types/: __init__.py  components.py  coord.py  nodes.py  pla2.py  skin.py  skin_builder.py  skinbuilder.py  zoom_params.py
requirements/: default.txt  docs.txt  types.txt
skins/: default.json
src/tile_renderer/: __about__.py  __init__.py  (+9 more)
stubs/: methodtools.pyi  schema.pyi
tests/: CAR.pla2.msgpack  __init__.py  enc.pla2.msgpack  enc.py  kze.pla2.msgpack  test.py  test_render.py
(+373 files in other folders)
