[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tile-renderer"
dynamic = ["version"]
description = 'Leaflet.js streetmap tile renderer'
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
keywords = ['leaflet', 'leaflet.js', 'leafletjs', 'map', 'tiles', 'renderer', 'tile-renderer', 'mapping']
authors = [
  { name = "7d", email = "61975820+iiiii7d@users.noreply.github.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "click",
  "msgspec",
  "shapely",
  "requests",
  "svg.py",
  "rich",
]

[project.urls]
Documentation = "https://github.com/MRT-Map/tile-renderer#readme"
Issues = "https://github.com/MRT-Map/tile-renderer/issues"
Source = "https://github.com/MRT-Map/tile-renderer"

[project.scripts]
tile-renderer = "tile_renderer.cli:tile_renderer"

[tool.hatch.version]
path = "src/tile_renderer/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/tile_renderer tests}"

[tool.coverage.run]
source_pkgs = ["tile_renderer", "tests"]
branch = true
parallel = true
omit = [
  "src/tile_renderer/__about__.py",
]

[tool.coverage.paths]
tile_renderer = ["src/tile_renderer", "*/tile-renderer/src/tile_renderer"]
tests = ["tests", "*/tile-renderer/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.ruff.lint]
ignore = ["E741"]